Added mongoose css framework

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/mongoose.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/grey.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>React Taskboard</title>
   </head>
   <body>
     <div id="root"></div>
     <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
-    <script src="js/init.js"></script>
+    <script src="js/init.js"></script>-->
   </body>
 </html>
