--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+  <title>Marvel Characters</title>
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/mongoose.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/grey.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>React Taskboard</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <!--  Scripts-->
-    <!--<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/init.js"></script>-->
-  </body>
+  <link href="css/roboto.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="css/mongoose.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="css/grey.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+</head>
+
+<body class="roboto">
+  <div id="root"></div>
+</body>
+
 </html>
